--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,3 +8,28 @@
  *
  * Consider organizing styles into separate files for maintainability.
  */
+
+ .language-switcher {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    background: white;
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 99999;
+}
+
+.language-switcher a {
+    text-decoration: none;
+    color: #004165;
+    padding: 8px 12px;
+    border-radius: 5px;
+    background-color: #f5f5f5;
+    transition: all 0.3s ease-in-out;
+}
+
+.language-switcher a:hover {
+    background-color: #e0e0e0;
+}
