--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
     <%= image_tag "D95.png", alt: "D96 logo", class: "logo"%>
     <h1><%= t("welcome") %></h1>
     <p class="date"><%= t("date") %></p>
-    <a href="#register" class="register-button"><%= t("register") %></a>
+    <a href="<%= new_registration_path %>" class="register-button"><%= t("register") %></a>
 </div>
 </section>
 <div class="section-divider"></div>
