--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,12 @@
 
   <body>
     <%= render "shared/navbar" %>
+    <% flash.each do |type, message| %>
+      <div class="flash-message <%= type %>">
+        <span class="flash-close" onclick="this.parentElement.style.display='none'">&times;</span>
+        <%= message %>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
