--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "New registration" %>
 
-<h1>New registration</h1>
+<h1><%= t("registrations.new") %></h1>
 
 <%= render "form", registration: @registration %>
 
