--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,24 @@
     <meta name="mobile-web-app-capable" content="yes">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+
+    <!-- Standard Favicon -->
     <%= favicon_link_tag 'favicon.ico' %>
+
+    <!-- PNG Favicons -->
+    <%= favicon_link_tag 'favicon-32x32.png', rel: 'icon', type: 'image/png', sizes: '32x32' %>
+    <%= favicon_link_tag 'favicon-16x16.png', rel: 'icon', type: 'image/png', sizes: '16x16' %>
+
+    <!-- Apple Touch Icon (For iPhones & iPads) -->
+    <%= favicon_link_tag 'apple-touch-icon.png', rel: 'apple-touch-icon', sizes: '180x180', type: 'image/png' %>
+
+    <!-- Android Chrome Icons -->
+    <%= favicon_link_tag 'android-chrome-192x192.png', rel: 'icon', type: 'image/png', sizes: '192x192' %>
+    <%= favicon_link_tag 'android-chrome-512x512.png', rel: 'icon', type: 'image/png', sizes: '512x512' %>
+
+    <!-- Web Manifest (For PWA support) -->
+    <%= tag :link, href: asset_path('site.webmanifest'), rel: 'manifest' %>
+
 
     <%= yield :head %>
 
