--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -154,5 +154,11 @@
     .nav-links li {
         padding: 10px 0;
     }
+/*
+    .flash-message {
+        max-width: 75%;
+        margin-left: auto;
+        margin-right: auto;
+    } */
 
 }
