--- a/app/views/registrations/_form.html.erb
+++ b/app/views/registrations/_form.html.erb
@@ -48,7 +48,7 @@
     <%= form.radio_button :social_event, true, id: "social_event_yes", required: true %>
     <%= form.label :social_event_yes, t('registrations.yes') %>
     <%= form.radio_button :social_event, false, id: "social_event_no", required: true %>
-    <%= form.label :social_event_no, t('registrationsno') %>
+    <%= form.label :social_event_no, t('registrations.no') %>
     </div>
   </div>
 
