Add story telling badge to main page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
 <section class="hero">
+<a href="#storytelling-tips" class="badge">Click Me!<br>Hints<br>on<br>Storytelling</a>
 <div class="overlay"></div>
 <div class="hero-content">
     <%= image_tag "D95.png", alt: "D96 logo", class: "logo"%>
