--- a/app/assets/stylesheets/welcome/index.css
+++ b/app/assets/stylesheets/welcome/index.css
@@ -22,7 +22,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
 }
 
 .hero-content {
@@ -134,6 +133,31 @@ h1 {
     pointer-events: none; /* Prevents map interaction so the entire area is clickable */
 }
 
+.badge {
+    background: #f2df74;
+    color: #222222;
+    font-size: 20px;
+    font-weight: bold;
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 1);
+    transition: all 0.3s ease-in-out;
+
+    position: absolute; /* Move the badge freely */
+    bottom: -80px; /* Adjust this value to move it further down */
+    left: 25%;
+    transform: rotate(-35deg);
+  }
+
+  .badge:hover {
+    transform: scale(1.1);
+  }
+
 /* ✅ Responsive Design: Stack Columns on Smaller Screens */
 @media (max-width: 768px) {
     .location-row {
@@ -146,5 +170,9 @@ h1 {
         max-width: 100%; /* Full width */
         padding-right: 0; /* Remove spacing */
         margin-bottom: 20px; /* Add space between sections */
+    }
+
+    .badge {
+        left: 0px;
     }
 }
