--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
       <!-- Navigation Links -->
       <ul class="nav-links">
         <li><a href="<%= root_path %>"><%= t('nav.home') %></a></li>
-        <li><a href="#"><%= t('nav.agenda') %></a></li>
+        <li><a href="<%= agenda_index_path %>"><%= t('nav.agenda') %></a></li>
       </ul>
     </div>
 
