--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -123,6 +123,33 @@
     line-height: 1;
   }
 
+  .content-container {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    line-height: 1.8;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.content-container h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.content-container p {
+    margin-bottom: 25px;
+    text-align: justify;
+}
+
+.column {
+    padding: 20px; /* Padding inside each column */
+    background-color: #f4f4f4;
+    border: 1px solid #ccc; /* Optional border */
+    box-sizing: border-box; /* Include padding in the width */
+}
+
 /* MOBILE MENU */
 @media (max-width: 768px) {
     .navbar-container {
