--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,7 +1,5 @@
 <% content_for :title, "New registration" %>
 
-<h1><%= t("registrations.new") %></h1>
-
-<%= render "form", registration: @registration %>
-
-<br>
+<div class="content-container">
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdzNNnQtY5BMOxFI7EnJnxojsv-sSZU59JCQVhsDOPnJCypsA/viewform?embedded=true" width="640" height="1228" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+</div>
