Add: Organised by Toastmasters Bavaria

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,7 +5,10 @@
     <%= image_tag "D95.png", alt: "D96 logo", class: "logo"%>
     <h1><%= t("welcome") %></h1>
     <p class="date"><%= t("date") %></p>
+    <p class="date">
     <a href="<%= new_registration_path %>" class="register-button"><%= t("register") %></a>
+    </p>
+    <p class="date">Organised by Toastmasters Community Bavaria</p>
 </div>
 </section>
 <div class="section-divider"></div>
