--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -126,7 +126,7 @@
   .content-container {
     max-width: 600px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 0;
     line-height: 1.8;
     display: flex;
     flex-direction: column;
