--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
     <p class="date">
     <a href="<%= new_registration_path %>" class="register-button"><%= t("register") %></a>
     </p>
-    <p class="date">Organised by Toastmasters Community Bavaria</p>
+    <p class="date"><%= t("organised") %></p>
 </div>
 </section>
 <div class="section-divider"></div>
