Link registration form directly

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
     <h1><%= t("welcome") %></h1>
     <p class="date"><%= t("date") %></p>
     <p class="date">
-    <a href="<%= new_registration_path %>" class="register-button"><%= t("register") %></a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdzNNnQtY5BMOxFI7EnJnxojsv-sSZU59JCQVhsDOPnJCypsA/viewform?usp=sharing" class="register-button"><%= t("register") %></a>
     </p>
     <p class="date"><%= t("organised") %></p>
 </div>
