Change Hints to Tips

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <section class="hero">
-<a href="<%= storytelling_index_path %>" class="badge">Click Me!<br>Hints<br>on<br>Storytelling</a>
+<a href="<%= storytelling_index_path %>" class="badge">Click Me!<br>Tips<br>on<br>Storytelling</a>
 <div class="overlay"></div>
 <div class="hero-content">
     <%= image_tag "D95.png", alt: "D96 logo", class: "logo"%>
